--- a/src/pages/Posts/styles.css
+++ b/src/pages/Posts/styles.css
@@ -6,6 +6,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(var(--home__card_width), 1fr));
   padding: 0px 15px;
+  padding-bottom: 10px;
   grid-gap: 20px;
   justify-content: center;
   width: 100%;
